# pssetools

./: .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SCRIPTS_README.md  SIMPLE_CONFIG_GUIDE.md  pyproject.toml  run_simulations.bat  run_simulations.ps1
docs/: CONFIG_GUIDE.md  PARAMETRIZATION_GUIDE.md  SETUP_WIZARD_GUIDE.md  SIM_RUNNER_GUIDE.md  SOLUTION_CONFIG_ERROR.md  STRUCTURE_CHANGES.md
example/: Makefile  channels.idv  inv24va.sav  run.py  script.sh  test.psa  test.sub
example/docs/: sliderPy.txt
example/src/: convload.py  estudio copy.idv
example1/: Makefile  flat.py  gyr_24_v34_1.dyr  test_runner.py  ver2425pid.sav
example2/: clean.bat  config_complete.yml  config_simple.yml  convload_sadi.py  dinamico.tsv  estatico.bat  estatico.tsv  run.bat  script.ps1  script.sh  test.sub  ver2526pid.sav  ver2526pin.sav  ver2526va.sav
example_old/: estudio.con  estudio.mon  main.py  script.ps1
pssetools/: __init__.py  acc.py  acc_pp.py  acc_unzip.py  ascc.py  cli.py  cnv.py  config.cfg  config_converter.py  dfx.py  dll.py  dyn.py  dyn_pp.py  gui.py  parse_sub.py  runner.py  setup.py  setup_wizard.py  sim_runner.py  snp.py
pssetools/arrbox/: contingency_pp.py
pssetools/scripts/: __init__.py  dinamico.py  plot.py
pssetools/template/: GEMINI.md  Makefile  README.md  compila.sh  config.cfg  dyn_1ph.py  dyn_3ph.py  main.jl  script.sh
pssetools/template/docs/: GEMINI.md  dyntools.txt  pssarrays.txt  pssras.txt
pssetools/template/optional/: config_Caso_01_Base.yml  config_Caso_02_Crecimiento.yml  config_Caso_03_Punta.yml  config_Caso_04_Valle.yml  (+1 more)
(+26 files in other folders)
